start adding client side passwordless support

--- a/client/jspm-src/index.html
+++ b/client/jspm-src/index.html
@@ -18,6 +18,8 @@
     <lang-switch></lang-switch>
 </div>
 
+<ng-view></ng-view>
+
 <script src="jspm_packages/system.js"></script>
 <script src="config.js"></script>
 <script>
