--- a/client/jspm-src/modules/user-management/modules/ui/user-menu.html
+++ b/client/jspm-src/modules/user-management/modules/ui/user-menu.html
@@ -13,7 +13,7 @@
         </md-menu-item>
         <md-menu-divider></md-menu-divider>
         <md-menu-item>
-            <md-button ng-click="$ctrl.logout()">{{'SIGN_OUT' | translate}}</md-button>
+            <md-button ng-click="$ctrl.user.signOut()">{{'SIGN_OUT' | translate}}</md-button>
         </md-menu-item>
     </md-menu-content>
 </md-menu>
