--- a/client/jspm-src/modules/user-management/modules/ui/user-menu.html
+++ b/client/jspm-src/modules/user-management/modules/ui/user-menu.html
@@ -9,7 +9,8 @@
     </md-button>
     <md-menu-content>
         <md-menu-item>
-            <md-button ng-click="$ctrl.gotoUserProfile()" class="md-button">{{'EDIT_USER_PROFILE' | translate}}</md-button>
+            <md-button ng-click="$ctrl.gotoUserProfile()" class="md-button">{{'USER_PROFILE' | translate}}</md-button>
+
         </md-menu-item>
         <md-menu-divider></md-menu-divider>
         <md-menu-item>
